--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ gtag('js',new Date());gtag('config','AW-830334858');</script>
 <span>0</span>
 </div>
 <div class="ga-xcm-desc">
-<span>XCM Available at</span>
+<span>UNY Available at</span>
 </div>
 <div class="ga-xcm-price d-flex align-items-center">
 <span>0</span>
