--- a/pitch-deck-crypto-exchange-xcm/index.html
+++ b/pitch-deck-crypto-exchange-xcm/index.html
@@ -40,7 +40,16 @@
                             <div class="col-md-12 text-center text-lg-left"><span class="ga-under-h2">CoinMetro Roadmap</span></div>
                             <div class="ga-pd-colendar-container">
                                 <div class="row ga-pd-colendar">
-                                    <div class="col-lg-1"><span>Jan</span></div>
+									<div class="col-lg-1"><span>Jan</span>
+							
+                                        <div class="ga-pd-calendar-bottom ga-calendar-a2">
+                                            <div class="ga-pd-cirlce-top"></div>
+                                            <div class="ga-pd-cirlce-bottom"></div>
+                                            <strong>March 2018</strong>
+                                            <span>IN YOUR FACE</span>
+
+										</div>
+									</div>
                                     <div class="col-lg-1">
 
                                         <span class="ga-pd-m"><span class="ga-pd-m">Feb</span></span>
