advisors last resposive error fixed

--- a/index.html
+++ b/index.html
@@ -4221,9 +4221,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 offset-md-2">
-							<h2 class="text-center">Gabinete de Asesores</h2>
-							<h3 class="text-center">“Un hombre sabio no necesita consejos. Un idiota no los aceptaría.”</h3>
-							<h5>Benjamin Franklin</h5>
+							<h1 class="text-center">Advisors</h1>
+
 						</div>
 					</div>
 					<div class="ga-team-mask ga-slider" id="ga-s2">
