--- a/index.html
+++ b/index.html
@@ -4334,7 +4334,7 @@
 						<div class="col-lg-6 .col-sm-12 ga-padding-l-45">
 							<div class="form-area">
 								<form class="bv-form" role="form" id="update-form" data-toggle="validator">
-									<h3>Contact UNITHY</h3>
+									<h3 style="color:#ffffff;"><strong>Contact UNITHY</strong> </h3>
 									<div class="form-group">
 										<input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
 										<small class="text-muted"></small>
