terms and condition2

--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -485,7 +485,7 @@ gtag('js',new Date());gtag('config','AW-830334858');</script>
 	<div class="row">
 		<div class="col-md-12 ga-terms-of-use">
 			<div class="text-center ga-padding-tb-50">
-				<h1 style="color:#f1720b;">CoinMetro Website Terms of Use</h1>
+				<h1 style="color:#f1720b;">UNITHY Website Terms of Use</h1>
 			</div>
 			
 			<h2 class="ga-padding-b10" style="color:#f1720b;">Introduction</h2>
