privacy-policy risk-disclaimer terms-of-use update

--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -633,13 +633,13 @@ gtag('js',new Date());gtag('config','AW-830334858');</script>
 				<div class="col-md-5 col">
 					<ul id="menu-footer-menu" class="d-flex flex-row justify-content-around">
 						<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1302">
-							<a href="terms-of-use/index.html" >Terms of Use</a>
+							<a href="../terms-of-use/index.html" >Terms of Use</a>
 						</li>
 						<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1303">
-							<a href="privacy-policy/index.html">Privacy Policy</a>
+							<a href="../privacy-policy/index.html">Privacy Policy</a>
 						</li>
 						<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1304">
-							<a href="risk-disclaimer/index.html">Risk Disclaimer</a>
+							<a href="../risk-disclaimer/index.html">Risk Disclaimer</a>
 						</li>
 					</ul>
 				</div>
