--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -440,7 +440,7 @@ html.pum-open.pum-open-overlay-disabled.pum-open-fixed .pum-container, html.pum-
 		<div class="row">
 			<div class="col-md-12">
 				<nav class="navbar ga-navbar navbar-expand-md ga-nopadding-lr">
-					<a class="navbar-brand ga-navbar-brand" href="index.html">
+					<a class="navbar-brand ga-navbar-brand" href="../index.html">
 						<img style="width:290px;" src="../img/logo.png">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText"
@@ -454,13 +454,13 @@ html.pum-open.pum-open-overlay-disabled.pum-open-fixed .pum-container, html.pum-
 								<a href="../whitepaper/index.html">Whitepaper</a>
 							</li>
 							<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1294">
-								<a href="https://www.medium.com/@CoinMetro">Website Terms of Use</a>
+								<a href="../terms-of-use/index.html">Website Terms of Use</a>
 							</li>
 							<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1294">
-								<a href="https://www.medium.com/@CoinMetro">Risk Disclaimer</a>
+								<a href="../risk-disclaimer/index.html">Risk Disclaimer</a>
 							</li>
 							<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1294">
-								<a href="https://www.medium.com/@CoinMetro">Privacy Policy</a>
+								<a href="../privacy-policy/index.html">Privacy Policy</a>
 							</li>
 
 
