--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 	<link rel="alternate" type="text/xml+oembed" href="wp-json/oembed/1.0/embed4366?url=http%3A%2F%2Fcoinmetro.es%2F&amp;format=xml"
 	/>
 	<style type="text/css" id="wp-custom-css">
+	 @font-face {
+  font-family: Cera-pro;
+  src: url(unithy-web/Cera-Pro-Regular.otf)
+}
+
+div {
+  font-family: Cera-pro;
+}
 		#bitnami-banner {
 			display: none
 		}
